# windows-face-unlock

./: .gitignore  INSTALL.md  LICENSE  README.md  config.example.toml  requirements.txt  setup.ps1
.github/workflows/: release.yml
credential_provider/: CMakeLists.txt  ClassFactory.cpp  FaceCredential.cpp  FaceCredential.h  FaceCredentialProvider.cpp  FaceCredentialProvider.def  FaceCredentialProvider.h  PipeClient.cpp  PipeClient.h  README.md  dll.cpp  guid.h  helpers.cpp  helpers.h  register.ps1
face_service/: __main__.py  _version.py  camera.py  config.py  credentials.py  detector.py  i18n.py  recognizer.py  service.py
installer/: README.md  build.py  download_weights.py  installer.iss  windows_face_unlock.spec
installer/postinstall/: register_tasks.ps1
presence_monitor/: enroll_gui.py  gui.py  monitor.py  remote_session.py  tray.py  updater.py  widgets.py
tools/: bench.py  clean_restart.ps1  disable_tauri.ps1  enroll.py  pipe_test.py  register_tasks.ps1  restart_service.ps1  set_password.py
